Fix:scrollbar-hide

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,14 @@
   font-weight: 700;
   font-style: normal;
 }
+
+
+/* Hide scrollbar but keep functionality */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari and Opera */
+}
